--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,3 +9,7 @@ set(SOURCES ${SOURCES})
 add_executable(${BINARY}_run ${SOURCES})
 
 add_library(${BINARY}_lib STATIC ${SOURCES})
+
+
+target_link_libraries(${BINARY}_run PUBLIC ${CMAKE_PROJECT_NAME}_lib ghc_filesystem)
+target_link_libraries(${CMAKE_PROJECT_NAME}_lib PUBLIC ghc_filesystem) # без этой строки CLion не понимает, что библиотека подключена
